--- a/Ecommerce project/package.json
+++ b/Ecommerce project/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "deploy": "surge ./dist --domain ecommerceproject.surge.sh",
     "lint": "eslint .",
     "preview": "vite preview"
   },
