--- a/Ecommerce project/package.json
+++ b/Ecommerce project/package.json
@@ -11,6 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "@reduxjs/toolkit": "^2.5.0",
     "axios": "^1.7.8",
     "date-fns": "^4.1.0",
