--- a/Ecommerce project/package.json
+++ b/Ecommerce project/package.json
@@ -11,19 +11,26 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@fontsource/roboto": "^5.1.1",
     "@heroicons/react": "^2.2.0",
+    "@hookform/resolvers": "^3.9.1",
+    "@mui/material": "^6.3.0",
     "@reduxjs/toolkit": "^2.5.0",
     "axios": "^1.7.8",
     "date-fns": "^4.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^6.28.0",
     "react-stars": "^2.2.5",
     "swiper": "^11.1.15",
-    "swr": "^2.2.5"
+    "swr": "^2.2.5",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
